position empty logic and error message added and teamAsize button size fixed on small screen

--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -111,7 +111,7 @@
 }
 
 .teamSizeBtnContainer, .teamSizeBtnContainer, .teamSizeBtnContainer{
-    width: 124%;
+    width: 110%;
     display: flex;
     justify-content: space-between;
 
